[package]
name = "buildkite"
version = "0.1.0"
description = "A Rust library for Buildkite"
authors = ["Cheng Pan <pancheng1987@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
