[package]
name = "buildkite"
version = "0.1.0"
description = "A Rust library for Buildkite"
authors = ["Cheng Pan <pancheng1987@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/leakingtapan/buildkite-rs"
repository = "https://github.com/leakingtapan/buildkite-rs.git"
documentation = "https://docs.rs/buildkite"
keywords = ["buildkite"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features= ["serde"] }
